# InfraForge-Haven

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPER_BRIEF.md  INFRA_SPRINT_PLAN.md  INFRA_SPRINT_PLAN_V2.md  Makefile  README.md  SPRINT_BACKLOG.md  SPRINT_PLAN.md  architecture-diagram.html  docker-compose.dev.yml
api/: .env.example  .vulture-allowlist.txt  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  tooling-baseline.md
api/alembic/: alembic.ini  env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_managed_services.py  0003_add_webhook_token.py  0004_add_monorepo_and_detection.py  0005_add_mysql_mongodb_service_types.py  0006_add_github_token_to_tenants.py  0007_add_tenant_members.py  0008_add_environments.py  0009_add_audit_logs.py  0010_add_billing.py  0011_add_gdpr_models.py  0012_add_organizations_sso.py  0013_add_canary_apptype_volumes_cronjobs.py  0014_add_clusters.py  0015_add_env_from_secrets.py  0016_add_missing_tables.py  0017_add_everest_name.py  0018_add_degraded_status.py  0019_add_unique_constraints.py  0020_add_gitops_sha_and_built_status.py  0021_add_pending_services.py  0022_drop_build_jobs_table.py  0023_add_token_revocations.py  0024_add_git_provider.py  0025_rename_servicetype_postgresql_to_postgres.py  0026_add_kafka_service_type.py  0027_add_missing_managed_service_columns.py  0028_add_access_requests.py
api/app/: config.py  deps.py  main.py  rate_limit.py
api/app/auth/: jwt.py  org_rbac.py  rbac.py
api/app/k8s/: client.py
api/app/middleware/: request_logging.py
api/app/models/: __init__.py  access_request.py  application.py  audit_log.py  cluster.py  cronjob.py  data_retention_policy.py  deployment.py  domain.py  environment.py  managed_service.py  organization.py  tenant.py  tenant_member.py  token_revocation.py  usage_record.py  user_consent.py
api/app/routers/: access_requests.py  applications.py  audit.py  backup.py  billing.py  build_queue.py  canary.py  clusters.py  cronjobs.py  deployments.py  domains.py  environments.py  events.py  gdpr.py  gitea.py  gitea_repos.py  github.py  health.py  members.py  observability.py  organizations.py  pvcs.py  queue_status.py  services.py  tenants.py  webhooks.py
api/app/schemas/: access_request.py  application.py  audit_log.py  billing.py  cluster.py  cronjob.py  deployment.py  domain.py  env_var.py  environment.py  gdpr.py  managed_service.py  organization.py  tenant.py  tenant_member.py
api/app/services/: ansi_parser.py  argocd_service.py  audit_service.py  backup_service.py  build_queue_service.py  build_service.py  chart_values_service.py  cluster_service.py  db_provisioner.py  deploy_service.py  detection_service.py  dns_routing_service.py  domain_service.py  everest_client.py  git_queue_service.py  gitea_client.py  gitops_scaffold.py  gitops_service.py  harbor_service.py  helm_values_builder.py  keycloak_service.py  lifecycle_events.py  managed_service.py  pipeline.py  pipeline_state.py  platform_bootstrap.py  secret_service.py  sse_buffer.py  tenant_service.py  token_revocation_service.py  (+2 more)
api/tests/: conftest.py  test_access_requests.py  test_applications_crud.py  test_applicationset_templates.py  test_argocd_live_status.py  test_argocd_service.py  test_argocd_sync_options.py  test_audit.py  test_auth.py  test_backup.py  test_backup_per_service.py  test_backup_service.py  test_billing.py  test_build_queue.py  test_canary.py  test_cluster_secret_store.py  test_clusters.py  test_credential_provisioning.py  test_cronjobs.py  test_db_helm_templates.py  test_db_provisioner.py  test_demo_contract.py  test_deploy_service_fields.py  test_deployment_model_fields.py  test_deployments_e3.py  test_domains.py  test_e2e_full_lifecycle.py  test_environments.py  test_everest_client.py  test_everest_integration.py  test_gdpr.py  test_git_queue.py  test_gitea_repos.py  test_github_oauth.py  test_github_oauth_placeholder.py  test_gitops_integration.py  test_gitops_pipeline.py  test_gitops_scaffold.py  test_h0_cross_tenant_isolation.py  test_hardcoded_scanner.py  (+55 more)
(+503 files in other folders)
