[project]
name = "haven-platform-api"
version = "0.1.0"
description = "Haven-Compliant Self-Service DevOps Platform API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data validation
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Kubernetes
    "kubernetes>=31.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",

    # Utils
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",

    # DNS verification for custom domains
    "dnspython>=2.7.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Redis (git queue, session cache)
    "redis[hiredis]>=5.0.0",

    # Managed DB credential provisioning (MySQL, MongoDB)
    "aiomysql>=0.2.0",
    "motor>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long — enforced by formatter, not blocker
    "E741",  # ambiguous variable name — existing test fixtures use `l`
    "N806",  # variable in function should be lowercase — test mocks use MockProv etc
    "B008",  # function call in default arg — FastAPI Depends() pattern
    "B904",  # raise from — will fix incrementally
    "SIM117",  # nested with — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]  # unused variables in tests (setup fixtures)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
